--- a/src/React/yqf/Index.html
+++ b/src/React/yqf/Index.html
@@ -17,7 +17,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <!--<link rel="stylesheet" href="path/to/amazeui.touch.min.css">-->
     <link href="css/sm.css" rel="stylesheet" />
-
+    <link href="css3.0/common.css" rel="stylesheet" />
+    <link href="css3.0/style/intlairlist.css" rel="stylesheet" />
 </head>
 <body>
   <div id="root">
