--- a/src/React-Hot/Yqf/Index.html
+++ b/src/React-Hot/Yqf/Index.html
@@ -17,8 +17,11 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <!--<link rel="stylesheet" href="path/to/amazeui.touch.min.css">-->
     <link href="css/sm.css" rel="stylesheet" />
+    <link href="css3.0/common.css" rel="stylesheet" />
+    <link href="css3.0/style/intlairlist.css" rel="stylesheet" />
 </head>
 <body>
+    <div class="icon-home"></div>
   <div id="root">
   </div>
   <!-- app.js 为上面的代码编译打包后的文件 -->
