--- a/src/React/yqf/Index.html
+++ b/src/React/yqf/Index.html
@@ -21,6 +21,7 @@
     <link href="css3.0/style/intlairlist.css" rel="stylesheet" />
 </head>
 <body>
+    <div class="icon-home"></div>
   <div id="root">
   </div>
   <!-- app.js 为上面的代码编译打包后的文件 -->
