--- a/src/React-Hot/index.html
+++ b/src/React-Hot/index.html
@@ -30,14 +30,9 @@
   <div id="root" class="page-group">
       <a id="myId" onclick="itemRighta.cc()">test</a>
   </div>
+  
     <script src="/static/bundle.js"></script>
-    <script>
+<script type="text/JavaScript" src="scripts/pdfobject/pdfobject.js"></script>
 
-     
-
-
-
-
-    </script>
 </body>
 </html>
