--- a/src/React-Hot/Yqf/Index.html
+++ b/src/React-Hot/Yqf/Index.html
@@ -19,6 +19,10 @@
     <link href="css/sm.css" rel="stylesheet" />
     <link href="css3.0/common.css" rel="stylesheet" />
     <link href="css3.0/style/intlairlist.css" rel="stylesheet" />
+    <style>
+        .accordion .accordion-body{display:none;}
+        .accordion .accordion-item.active .accordion-body{display:block;}
+    </style>
 </head>
 <body>
     <div class="icon-home"></div>
