--- a/src/React-Hot/index.html
+++ b/src/React-Hot/index.html
@@ -24,7 +24,10 @@
         .title{
             position:static
         }
+           .accordion .accordion-body{display:none;}
+        .accordion .accordion-item.active .accordion-body{display:block;}
     </style>
+       
 </head>
 <body>
   <div id="root" class="page-group">
