--- a/src/React-Hot/index.html
+++ b/src/React-Hot/index.html
@@ -33,9 +33,11 @@
   <div id="root" class="page-group">
       <a id="myId" onclick="itemRighta.cc()">test</a>
   </div>
-  
-    <script src="/static/bundle.js"></script>
-<script type="text/JavaScript" src="scripts/pdfobject/pdfobject.js"></script>
+      <!--<script type='text/javascript' src='http://g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>-->
 
+    <script src="/static/bundle.js"></script>
+    <script>
+       //  $('.bar').height(49);
+    </script>
 </body>
 </html>
