--- a/src/React/index.html
+++ b/src/React/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <div id="wrapper"></div>
-    <script src="bundle.js"></script>
+    <div id="root"></div>
+    <script src="bundles.js"></script>
   </body>
 </html>
